Changed return values to match that of redis